fix: fix block placement cta beneath footer on mobile

--- a/src/style/_home.scss
+++ b/src/style/_home.scss
@@ -40,7 +40,7 @@
     font-size: 13px;
 
     &--mobile {
-        margin: 30px 0 16px;
+        margin: 16px 0 8px;
     }
 }
 
