--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -158,7 +158,7 @@ body {
 @media only screen and (max-width: constants.$desktop-breakpoint) {
     .page-container {
         width: 95%;
-        height: calc(100% - 100px - 40px);
+        height: calc(100% - 100px - 24px);
     }
 
     .page-container__title {
